hphp/hack/test/typecheck/constraints/override_with_generic_3.php.exp
ERROR: File "override_with_generic_3.php", line 18, characters 19-20:
The method `do` is not compatible with the overridden method (Typing[4341])
  File "override_with_generic_3.php", line 18, characters 19-20:
  Method `do` has type `(function<T>(): T where TEnt as IMyEnt with { type TC = T })` in `MyReified`
  File "override_with_generic_3.php", line 11, characters 19-20:
  But it has type `(function(): Foo)` in parent `MyBase`
  File "override_with_generic_3.php", line 18, characters 19-20:
  Type `(function<T>(): T where TEnt as IMyEnt with { type TC = T })` is not a subtype of `(function(): Foo)`
  File "override_with_generic_3.php", line 18, characters 44-70:
  Expected a class with `{type TC = _}`
  File "override_with_generic_3.php", line 18, characters 36-39:
  But got `TEnt as IMyEnt`
